--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
